# mailchimp-fastapi-server

./: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  compose.yml  pyproject.toml  requirements.txt
docker/: Dockerfile
src/: configs.py  main.py  models.py
src/routes/: subscription_routes.py
src/services/: mailchimp_services.py
