[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["fioreale <alefio96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
requests = "^2.31.0"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
